Header section finished, with media queries

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <header>
       <a href="#" class="logo"><i class="fas fa-hamburger"></i>superburger</a>
 
-      <div id="menu-bar">
-          
+      <div id="menu-bar" class="fas fa-bars">
+
       </div>
 
     <nav class="navbar">
