Home section finished

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
 
     <!-- custom css -->
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>Document</title>
   </head>
   <body>
@@ -20,22 +20,62 @@
     <header>
       <a href="#" class="logo"><i class="fas fa-hamburger"></i>superburger</a>
 
-      <div id="menu-bar" class="fas fa-bars">
+      <div id="menu-bar" class="fas fa-bars lineas"></div>
 
-      </div>
-
-    <nav class="navbar">
-        <a href="#">home</a>
-        <a href="#speciality">Especialidades</a>
-        <a href="#popular">populares</a>
-        <a href="#gallery">galería</a>
-        <a href="#reviews">reseña</a>
-        <a href="#order">ordena</a>
-    </nav>
+      <nav class="navbar">
+          <a href="#">home</a>
+          <a href="#speciality">Especialidades</a>
+          <a href="#popular">populares</a>
+          <a href="#gallery">galería</a>
+          <a href="#reviews">reseñas</a>
+          <a href="#order">ordena ya!</a>
+      </nav>
     </header>
-    <!-- header section starts -->
+    <!-- header section ends -->
+
+
+    <!-- home section starts -->
+    <section class="home" id="home">
+        <div class="content">
+            <h3>comida hecha con amor</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur labore eos iste rem dicta, deserunt iusto sint quis est! Neque animi aperiam mollitia. Voluptas beatae ex fugit, libero et animi cumque repellendus alias impedit magni accusantium quas laudantium vero aliquam!</p>
+            <a href="#" class="btn">ordena ahora</a>
+        </div>
+
+        <div class="image">
+            <img src="images/home-img.png" alt="" srcset="">
+        </div>
+    </section>
+    <!-- home section ends -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     <!-- custom js -->
-    <script src="./js/restaurant.js"></script>
+    <script src="js/restaurant.js"></script>
   </body>
 </html>
