Speciality section finished and some link was repaired

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <a href="#" class="logo"><i class="fas fa-hamburger"></i>superburger</a>
 
-      <div id="menu-bar" class="fas fa-bars lineas"></div>
+      <div id="menu-bar" class="fas fa-bars"></div>
 
       <nav class="navbar">
           <a href="#">home</a>
@@ -37,7 +37,7 @@
     <!-- home section starts -->
     <section class="home" id="home">
         <div class="content">
-            <h3>comida hecha con amor</h3>
+            <h3>comida hecha con mucho  <i class="fas fa-heart heart"></i> </h3>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur labore eos iste rem dicta, deserunt iusto sint quis est! Neque animi aperiam mollitia. Voluptas beatae ex fugit, libero et animi cumque repellendus alias impedit magni accusantium quas laudantium vero aliquam!</p>
             <a href="#" class="btn">ordena ahora</a>
         </div>
@@ -48,7 +48,72 @@
     </section>
     <!-- home section ends -->
 
+<!-- speciality section starts -->
+    <section class="speciality" id="speciality">
+      <h1 class="heading">nuestra <span>especialidad</span></h1>
 
+      <div class="box-container">
+
+        <div class="box">
+          <img class="image" src="images/s-img-1.jpg" alt="">
+          <div class="content">
+            <img src="images/s-1.png" alt="">
+            <h4>hamburguesa sabrosura</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repellendus dicta perspiciatis deleniti eaque eligendi consectetur sunt officia inventore, sed ad natus amet. Iste, pariatur amet eius suscipit est magni?</p>
+          </div>
+        </div>
+
+        <div class="box">
+          <img class="image" src="images/s-img-2.jpg" alt="">
+          <div class="content">
+            <img src="images/s-2.png" alt="">
+            <h4>pizza súper trópico</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repellendus dicta perspiciatis deleniti eaque eligendi consectetur sunt officia inventore, sed ad natus amet. Iste, pariatur amet eius suscipit est magni?</p>
+          </div>
+        </div>
+
+        <div class="box">
+          <img class="image" src="images/s-img-3.jpg" alt="">
+          <div class="content">
+            <img src="images/s-3.png" alt="">
+            <h4>helado artesanal</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repellendus dicta perspiciatis deleniti eaque eligendi consectetur sunt officia inventore, sed ad natus amet. Iste, pariatur amet eius suscipit est magni?</p>
+          </div>
+        </div>
+
+        <div class="box">
+          <img class="image" src="images/s-img-4.jpg" alt="">
+          <div class="content">
+            <img src="images/s-4.png" alt="">
+            <h4>jugos súper exóticos</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repellendus dicta perspiciatis deleniti eaque eligendi consectetur sunt officia inventore, sed ad natus amet. Iste, pariatur amet eius suscipit est magni?</p>
+          </div>
+        </div>
+
+        <div class="box">
+          <img class="image" src="images/s-img-5.jpg" alt="">
+          <div class="content">
+            <img src="images/s-1.png" alt="">
+            <h4>Combo artesanal salmón</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repellendus dicta perspiciatis deleniti eaque eligendi consectetur sunt officia inventore, sed ad natus amet. Iste, pariatur amet eius suscipit est magni?</p>
+          </div>
+        </div>
+
+        <div class="box">
+          <img class="image" src="images/s-img-6.jpg" alt="">
+          <div class="content">
+            <img src="images/s-1.png" alt="">
+            <h4>hamburguesa Big nuggets</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti repellendus dicta perspiciatis deleniti eaque eligendi consectetur sunt officia inventore, sed ad natus amet. Iste, pariatur amet eius suscipit est magni?</p>
+          </div>
+        </div>
+
+        
+
+      </div>
+      
+    </section>
+<!-- speciality section ends -->
 
 
 
