--- a/index.html
+++ b/index.html
@@ -115,7 +115,97 @@
     </section>
 <!-- speciality section ends -->
 
+<!-- popular section starts -->
 
+<section class="popular" id="popular">
+  <h1 class="heading">comidas más<span> populares</span></h1>
+  
+  <div class="box-container">
+
+    <div class="box">
+      <span class="price"> $35.000 </span>
+      <img src="images/p-1.jpg" alt="">
+      <h3>hamburguesa sabrosura</h3>
+      <div class="stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+      </div>
+      <a href="#" class="btn">ordena ya!!</a>
+    </div>
+
+    <div class="box">
+      <span class="price"> $55.000 </span>
+      <img src="images/p-2.jpg" alt="">
+      <h3>pastel art mandarina</h3>
+      <div class="stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+      </div>
+      <a href="#" class="btn">ordena ya!!</a>
+    </div>
+    <div class="box">
+      <span class="price"> $18.000 </span>
+      <img src="images/p-3.jpg" alt="">
+      <h3>snacks artesanales</h3>
+      <div class="stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+      </div>
+      <a href="#" class="btn">ordena ya!!</a>
+    </div>
+    <div class="box">
+      <span class="price"> $7.500 </span>
+      <img src="images/p-4.jpg" alt="">
+      <h3>muffins de chocolate</h3>
+      <div class="stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+      </div>
+      <a href="#" class="btn">ordena ya!!</a>
+    </div>
+    <div class="box">
+      <span class="price"> $12.500 </span>
+      <img src="images/p-5.jpg" alt="">
+      <h3>Jugos coloridos</h3>
+      <div class="stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+      </div>
+      <a href="#" class="btn">ordena ya!!</a>
+    </div>
+    <div class="box">
+      <span class="price"> $6.000 </span>
+      <img src="images/p-6.jpg" alt="">
+      <h3>helados art ice</h3>
+      <div class="stars">
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+        <i class="fas fa-star"></i>
+      </div>
+      <a href="#" class="btn">ordena ya!!</a>
+    </div>
+
+  </div>
+</section>
+<!-- 26:31 -->
+<!-- popular section ends -->
 
 
 
