--- a/index.html
+++ b/index.html
@@ -207,7 +207,39 @@
 <!-- 26:31 -->
 <!-- popular section ends -->
 
+<!-- steps section -->
+<section class="steps">
 
+<div class="box">
+
+  <img src="images/step-1.jpg" alt="">
+  <h3>Elija su comida favorita</h3>
+
+</div>
+
+<div class="box">
+
+  <img src="images/step-2.jpg" alt="">
+  <h3>¡¡Envío rápido y gratis!!</h3>
+  
+</div>
+
+<div class="box">
+
+  <img src="images/step-3.jpg" alt="">
+  <h3>Diversos métodos de pago</h3>
+  
+</div>
+
+<div class="box">
+
+  <img src="images/step-4.jpg" alt="">
+  <h3>¡¡finalmente, disfruta tu comida!!</h3>
+  
+</div>
+
+</section>
+<!-- steps section -->
 
 
 
