Gallery section finished

--- a/index.html
+++ b/index.html
@@ -243,6 +243,92 @@
 
 
 
+<!-- gallery section starts -->
+
+<section class="gallery" id="gallery">
+
+  <h3 class="heading">nuestra <span>galería </span> de comidas</h3>
+
+  <div class="box-container">
+    <div class="box">
+      <img src="images/g-1.jpg" alt="">
+      <div class="content">
+        <h3>hamburguesas</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, cumque?</p>
+        <a href="" class="btn">ordena ya!!</a>
+      </div>
+    </div>
+    <div class="box">
+      <img src="images/g-2.jpg" alt="">
+      <div class="content">
+        <h3>sanduches</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, cumque?</p>
+        <a href="" class="btn">ordena ya!!</a>
+      </div>
+    </div>
+    <div class="box">
+      <img src="images/g-3.jpg" alt="">
+      <div class="content">
+        <h3>tacos y burritos</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, cumque?</p>
+        <a href="" class="btn">ordena ya!!</a>
+      </div>
+    </div>
+    <div class="box">
+      <img src="images/g-4.jpg" alt="">
+      <div class="content">
+        <h3>muffins</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, cumque?</p>
+        <a href="" class="btn">ordena ya!!</a>
+      </div>
+    </div>
+    <div class="box">
+      <img src="images/g-5.jpg" alt="">
+      <div class="content">
+        <h3>snacks antesanales</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, cumque?</p>
+        <a href="" class="btn">ordena ya!!</a>
+      </div>
+    </div>
+    <div class="box">
+      <img src="images/g-6.jpg" alt="">
+      <div class="content">
+        <h3>crunch & krispy</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, cumque?</p>
+        <a href="" class="btn">ordena ya!!</a>
+      </div>
+    </div>
+    <div class="box">
+      <img src="images/g-7.jpg" alt="">
+      <div class="content">
+        <h3>superDesayunos</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, cumque?</p>
+        <a href="" class="btn">ordena ya!!</a>
+      </div>
+    </div>
+    <div class="box">
+      <img src="images/g-8.jpg" alt="">
+      <div class="content">
+        <h3>chocolates art</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, cumque?</p>
+        <a href="" class="btn">ordena ya!!</a>
+      </div>
+    </div>
+    <div class="box">
+      <img src="images/g-9.jpg" alt="">
+      <div class="content">
+        <h3>pastelería artesanal</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Error, cumque?</p>
+        <a href="" class="btn">ordena ya!!</a>
+      </div>
+    </div>
+    
+  </div>
+</section>
+
+<!-- gallery section end -->
+
+
 
 
 
