Reviews section finished

--- a/index.html
+++ b/index.html
@@ -328,7 +328,41 @@
 
 <!-- gallery section end -->
 
+<!-- review section starts -->
+<section class="review" id="reviews">
 
+  <h1 class="heading"><span>reseñas</span>  de nuestros clientes</h1>
+  <div class="box-container">
+    <div class="box">
+      <img src="images/pic1.png" alt="">
+      <h3>juana lópez</h3>
+      <div class="stars">
+        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
+      </div>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt libero enim quis voluptate reiciendis quas sunt quaerat rem vel suscipit.</p>
+    </div>
+
+    <div class="box">
+      <img src="images/pic2.png" alt="">
+      <h3>fernando aristizábal</h3>
+      <div class="stars">
+        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+      </div>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt libero enim quis voluptate reiciendis quas sunt quaerat rem vel suscipit.</p>
+    </div>
+
+    <div class="box">
+      <img src="images/pic3.png" alt="">
+      <h3>luisa camelo</h3>
+      <div class="stars">
+        <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="far fa-star"></i>
+      </div>
+      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt libero enim quis voluptate reiciendis quas sunt quaerat rem vel suscipit.</p>
+    </div>
+  </div>
+
+</section>
+<!-- review section ends -->
 
 
 
