Order section finished

--- a/index.html
+++ b/index.html
@@ -364,6 +364,31 @@
 </section>
 <!-- review section ends -->
 
+<!-- order section starts -->
+<section class="order" id="order">
+
+  <h3 class="heading"><span>ordena</span> ya!!!</h3>
+  <div class="row">
+    <img src="images/order-img.jpg" alt="">
+
+    <form action="">
+
+      <div class="inputBox">
+        <input type="text" name="" id="" placeholder="Su Nombre">
+        <input type="email" name="" id="" placeholder="Su correo electrónico">
+        <input type="number" name="" id="" placeholder="Su número de teléfono">
+        <input type="text" name="" id="" placeholder="Nombre de la comida deseada..">
+      </div>
+      <textarea placeholder="Su dirección" name="" id="" cols="30" rows="10"></textarea>
+
+      <input class="btn" type="submit"  value="Ordenar ya!!">
+    </form>
+  </div>
+
+  
+</section>
+<!-- order section ends -->
+
 
 
 
