Footer section finished

--- a/index.html
+++ b/index.html
@@ -390,6 +390,21 @@
 <!-- order section ends -->
 
 
+<!-- /* footer section starts */ -->
+<section class="footer">
+  <div class="share">
+
+    <a href="" class="btn btn-circ">facebook</a>
+    <a href="" class="btn btn-circ">twitter</a>
+    <a href="" class="btn btn-circ">instagram</a>
+    <a href="" class="btn btn-circ">pinterest</a>
+    <a href="" class="btn btn-circ">linkedIn</a>
+
+  </div>
+  <h1 class="credit">created by <span>devDesign</span> | all rights reserved &COPY;</h1>
+  
+</section>
+<!-- /* footer section ends */ -->
 
 
 
