--- a/index.html
+++ b/index.html
@@ -406,6 +406,16 @@
 </section>
 <!-- /* footer section ends */ -->
 
+<!-- /* scroll top button */ -->
+    <a href="#home" class="fas fa-angle-up" id="scroll-top"></a>
+<!-- /* scroll top button */ -->
+
+
+<!-- loader -->
+<div class="loader-container">
+  <img src="images/loader.gif" alt="">
+</div>
+<!-- loader -->
 
 
 
